service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot
spec:
  type: ClusterIP 
  selector:
    app: springboot 
  ports:
  - name: http
    port: 8080
    protocol: TCP 
    targetPort: 8080
